# openai-compatible-spark

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker.yml
src/: __init__.py  chat.py  config.py  models.py
