[project]
authors = [{ name = "Muspi Merol", email = "me@promplate.dev" }]
dependencies = [
    "fastapi[all]>=0.104.0",
    "pydantic-settings>=2.0.3",
    "uvicorn[standard]>=0.23.2",
    "spark-ai-sdk>=0.0.4",
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[tool.pdm.dev-dependencies]
dev = ["isort>=5.12.0", "black>=23.10.1"]

[tool.pdm.scripts]
dev = "uvicorn src:app --reload"
format = "isort . && black ."
